syntax = "proto3";

package aggregator;

import "google/protobuf/timestamp.proto";

option go_package = "./aggregator";

service AggregatorService {
  rpc StreamCandlesticks (StreamRequest) returns (stream StreamResponse);
}

message StreamRequest {
}

message StreamResponse {
  string symbol = 1;
  double open = 2;
  double high = 3;
  double low = 4;
  double close = 5;
  double volume = 6;
  google.protobuf.Timestamp timestamp = 7;
}
